fix typer spacing

--- a/portfolio-2/src/App.css
+++ b/portfolio-2/src/App.css
@@ -19,7 +19,7 @@
       width: 0;
     }
     100% {
-      width: 17.8rem;
+      width: 8em;
     }
   }
 
